--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html, body, #root, .app-container {
   grid-template-rows: 10% 1fr 10%;
 }
 
-/* NAV */
+/* NAV STYLES */
 
 nav {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -17,30 +17,27 @@ nav {
   align-items: center;
 }
 
-.nav-logo {
+
+
+/* .nav-logo {
   font-size: 3rem;
   margin-left: 3rem;
 }
 
 .nav-logo span {
   font-size: 4rem;
-}
+} */
 
 .nav-buttons {
   display: flex;
   width: 100%;
+  color: black;
   justify-content: space-around;
 }
 
-nav button {
-  color: white;
-  font-size: 2rem;
-  background: none;
-  border: none;
-  padding: 0;
-}
 
-/* SPLASH PAGE */
+
+/*
 
 .splash-page {
   display: flex;
@@ -63,8 +60,9 @@ nav button {
   width: 70%;
   margin-left: 1rem;
 }
+ */
 
-/* FOOTER */
+
 footer {
   color: white;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25),
