--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html, body, #root, .app-container {
   margin: 0;
   height: 100%;
+  font-family: 'fatfrank', sans-serif;
 }
 
 .app-container {
@@ -10,29 +11,49 @@ html, body, #root, .app-container {
 
 /* NAV STYLES */
 
-nav {
+.navigation {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0px 0px 50px 0px;
+  padding: 3rem;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
-
-
-/* .nav-logo {
+.nav-logo {
   font-size: 3rem;
-  margin-left: 3rem;
 }
-
-.nav-logo span {
-  font-size: 4rem;
-} */
 
 .nav-buttons {
   display: flex;
-  width: 100%;
-  color: black;
   justify-content: space-around;
+  align-items: center;
+  width: 40%;
+  font-size: 2rem;
+}
+
+.nav-buttons-admin {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 60%;
+  font-size: 2rem;
+}
+
+.nav-buttons form {
+  font-size: 1rem;
+  display: flex;
+}
+
+.signup-input-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-buttons-admin {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.5rem;
 }
 
 
@@ -43,11 +64,9 @@ nav {
   grid-template-columns: 40% 60%;
   grid-template-rows: 1fr;
   padding: 5% 8% 5% 12%;
-  /* border: 2px solid green; */
 }
 
 .splash-text {
-  /* border: 2px solid black; */
   font-family: 'fatfrank', sans-serif;
 }
 
@@ -80,16 +99,65 @@ nav {
   border-radius: 10%;
 }
 
-.splash-image-container {
-  /* border: 2px solid pink; */
-}
-
 .splash-image-container > img {
-  /* border: 2px solid teal; */
   margin-left: 22%;
   width: 78%;
 }
 
+/* HOMEPAGE STYLES */
+
+.homepage {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.homepage h1 {
+  margin: 2rem 0;
+  text-align: center;
+  color: white;
+}
+
+.homepage-section-container {
+  width: 100%;
+  height: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 0 5%;
+}
+
+.homepage-section-container section {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 20%;
+  height: 100%;
+}
+
+.homepage-button {
+  background-color: white;
+  margin: 0 auto;
+  width: 40%;
+}
+
+.user-section {
+  grid-column: 1 / 2;
+  background-image: url('../src/images/homepage/Homepage1.png');
+}
+
+.callsheet-section {
+  grid-column: 2 / 3;
+  background-image: url('../src/images/homepage/Homepage2.png');
+}
+
+.distro-section {
+  grid-column: 3 / 4;
+  background-image: url('../src/images/homepage/Homepage3.png');
+}
 
 
 /* FOOTER STYLES */
