--- a/src/index.css
+++ b/src/index.css
@@ -295,6 +295,10 @@ html, body, #root, .app-container {
   background-position: bottom;
 }
 
+/* --DISTRO STYLES */
+
+
+
 /* --FOOTER STYLES */
 
 footer {
