--- a/src/index.css
+++ b/src/index.css
@@ -348,7 +348,7 @@ html, body, #root, .app-container {
 .user-role-view {
   padding: 5%;
   display: grid;
-  grid-template-columns: 35% 1fr 35%;
+  grid-template-columns: 30% 1fr 30%;
 }
 
 .user-left {
@@ -366,6 +366,7 @@ html, body, #root, .app-container {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0px 0px 50px 0px;
   padding: 5%;
+  width: 80%;
 }
 
 .user-right {
@@ -722,6 +723,90 @@ html, body, #root, .app-container {
 
 /* --DISTRO STYLES */
 
+.distro-display {
+  display: grid;
+  grid-template-columns: 20% 1fr 20%;
+  grid-template-rows: 30% 70%;
+}
+
+.distro-search-form {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  margin: auto;
+  font-size: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+}
+
+.distro-search-form > div {
+  display: flex;
+}
+
+.distro-search-form input {
+  margin: .5rem 0;
+  font-family: 'Raleway';
+  border: none;
+  border-bottom: 1px groove black;
+  padding-left: .5rem;
+  width: 80%;
+}
+
+.distro-search-form select {
+  margin: .5rem;
+  font-size: 1rem;
+  font-family: 'Raleway';
+}
+
+.distro-search-form input:focus {
+  outline: none;
+}
+
+#search-submit {
+  font-size: 2rem;
+  background-color: #eeb53c;
+  opacity: .85;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-family: 'fatfrank';
+  margin-left: .5rem;
+  margin-bottom: 2rem;
+  padding: .5rem;
+}
+
+#search-submit:hover {
+  opacity: 1
+}
+
+.distro-search-results {
+  margin: auto;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.distro-search-results > h3 {
+  font-family: 'Raleway';
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+#collect-emails-button {
+  font-size: 1.5rem;
+  background-color: #eeb53c;
+  opacity: .85;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-family: 'fatfrank';
+  margin: .5rem;
+  padding: .5rem;
+}
+
+#collect-emails-button:hover {
+  opacity: 1;
+}
 
 
 /* --FOOTER STYLES */
